--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -1,6 +1,6 @@
 # Simple workflow for deploying static content to GitHub Pages
 name: Deploy static content to Pages
-
+title: Smash Bros Redmond
 on:
   # Runs on pushes targeting the default branch
   push:
